--- a/app/src/main/res/drawable/doge_empty.xml
+++ b/app/src/main/res/drawable/doge_empty.xml
@@ -3,16 +3,16 @@
 
     <item android:state_pressed="true"
         android:state_window_focused="true"
-        android:drawable="@drawable/mugiwara_empty"/>
+        android:drawable="@drawable/corazonnegro"/>
 
     <item android:state_focused="true"
         android:state_window_focused="true"
-        android:drawable="@drawable/mugiwara_empty"/>
+        android:drawable="@drawable/corazonnegro"/>
 
     <item android:state_selected="true"
         android:state_window_focused="true"
-        android:drawable="@drawable/mugiwara_empty"/>
+        android:drawable="@drawable/corazonnegro"/>
 
     <item
-        android:drawable="@drawable/mugiwara_empty"/>
+        android:drawable="@drawable/corazonnegro"/>
 </selector>
