--- a/app/src/main/res/drawable/doge_fill.xml
+++ b/app/src/main/res/drawable/doge_fill.xml
@@ -2,16 +2,16 @@
 
     <item android:state_pressed="true"
         android:state_window_focused="true"
-        android:drawable="@drawable/mugiwara_fill"/>
+        android:drawable="@drawable/corazonrojo"/>
 
     <item android:state_focused="true"
         android:state_window_focused="true"
-        android:drawable="@drawable/mugiwara_fill"/>
+        android:drawable="@drawable/corazonrojo"/>
 
     <item android:state_selected="true"
         android:state_window_focused="true"
-        android:drawable="@drawable/mugiwara_fill"/>
+        android:drawable="@drawable/corazonrojo"/>
 
     <item
-        android:drawable="@drawable/mugiwara_fill"/>
+        android:drawable="@drawable/corazonrojo"/>
 </selector>
